<resources>
    <string name="app_name">AskPDF</string>
    <string name="tab_home">Home</string>
    <string name="tab_recent_files">Recent Files</string>
    <string name="tab_collection">Collection</string>
    <string name="tab_settings">Settings</string>
    <string name="all">All</string>
    <string name="pdf" translatable="false">PDF</string>
    <string name="word" translatable="false">Word</string>
    <string name="excel" translatable="false">Excel</string>
    <string name="ppt" translatable="false">PPT</string>
    <string name="allow">Allow</string>
    <string name="allow_file_permissions_to_manage_documents">Allow file permissions to manage documents</string>
    <string name="no_files_tips">No supported documents found</string>
    <string name="no_history_yet">No recent files yet</string>
    <string name="no_bookmarks_yet">No collected files yet</string>
    <string name="collection_success">Added to collection</string>
    <string name="collection_cancelled">Removed from collection</string>
    <string name="open_file_failed">Unable to open this file</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="delete">Delete</string>
    <string name="rename_file">Rename file</string>
    <string name="file_name">File name</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="file_name_empty">File name cannot be empty</string>
    <string name="file_name_exists">A file with this name already exists</string>
    <string name="rename_file_failed">Unable to rename this file</string>
    <string name="delete_file_failed">Unable to delete this file</string>
    <string name="delete_confirm_title">Delete file?</string>
    <string name="delete_confirm_message">This will permanently delete the file from your device.</string>
    <string name="share_file_failed">Unable to share this file</string>
    <string name="print_file_failed">Unable to print this file</string>
    <string name="pdf_password_title">PDF Password</string>
    <string name="enter_password_to_view_pdf">Enter password to view PDF</string>
    <string name="password_required_for_pdf">Password required for: %1$s</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="create_pdf">Create PDF</string>
    <string name="creating_pdf">Creating PDF...</string>
    <string name="create_cancelled">Create cancelled</string>
    <string name="create_failed">Unable to create PDF</string>
    <string name="create_success">PDF created successfully</string>
    <string name="result">Result</string>
    <string name="create_success_title">PDF Created</string>
    <string name="create_success_message">Your scanned document is ready.</string>
    <string name="open_pdf">Open PDF</string>
    <string name="merge_pdf">Merge PDF</string>
    <string name="split_pdf">Split PDF</string>
    <string name="split_coming_soon">Split PDF is not available yet</string>
    <string name="split_select_pdf_tips">Select one PDF to split.</string>
    <string name="split_select_pdf_first">Please select a PDF first</string>
    <string name="one_page_tips">This PDF has only one page and cannot be split.</string>
    <string name="pdf_split_failed">Unable to split PDF</string>
    <string name="splitting_pdf">Splitting PDF...</string>
    <string name="split_page_number">Page %1$d</string>
    <string name="split_selected_count">Selected %1$d/%2$d pages</string>
    <string name="split_no_page_selected">Select at least one page to split</string>
    <string name="pdf_split_success_title">PDF Split</string>
    <string name="pdf_split_success_message">Your split PDF is ready.</string>
    <string name="merge_selection_count">Selected %1$d/%2$d. Choose at least 2 PDFs.</string>
    <string name="no_pdf_files">No PDF files found</string>
    <string name="merge_requires_two">Select at least 2 PDFs to merge</string>
    <string name="merge_cancelled">Merge cancelled</string>
    <string name="merging_pdf">Merging PDF...</string>
    <string name="pdf_merge_failed">Unable to merge PDF files</string>
    <string name="pdf_merge_success_title">PDF Merged</string>
    <string name="pdf_merge_success_message">Your merged PDF is ready.</string>
    <string name="merge_max_selected">You can select up to %1$d PDFs</string>
    <string name="share_app">Share App</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="check_out_this_app">Check out this app</string>
    <string name="share_app_text">I found this useful app: %1$s</string>
    <string name="share_app_failed">Unable to share this app</string>
    <string name="merge">Merge</string>
    <string name="split">Split</string>
</resources>
