<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_document_action_sheet"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="20dp">

    <View
        android:layout_width="38dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="14dp"
        android:background="#E5E5E5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/file_card"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/bg_home_file_card"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dialog_file_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_pdf" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_collection"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_collection_no" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/dialog_file_path"
            app:layout_constraintEnd_toStartOf="@+id/btn_collection"
            app:layout_constraintStart_toEndOf="@+id/dialog_file_icon"
            app:layout_constraintTop_toTopOf="@+id/dialog_file_icon"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Monthly report.pdf" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_file_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="middle"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textColor="#806B69"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_file_icon"
            app:layout_constraintEnd_toStartOf="@+id/btn_collection"
            app:layout_constraintStart_toEndOf="@+id/dialog_file_icon"
            app:layout_constraintTop_toBottomOf="@+id/dialog_file_name"
            tools:text="/storage/emulated/0/Download/Monthly report.pdf" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_rename"
        style="@style/DocumentActionItem"
        android:layout_marginTop="14dp"
        android:text="@string/rename"
        app:drawableStartCompat="@drawable/ic_rename" />

    <View style="@style/DocumentActionDivider" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_share"
        style="@style/DocumentActionItem"
        android:text="@string/share"
        app:drawableStartCompat="@drawable/ic_share" />

    <View style="@style/DocumentActionDivider" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_print"
        style="@style/DocumentActionItem"
        android:text="@string/print"
        app:drawableStartCompat="@drawable/ic_print" />

    <View
        android:id="@+id/print_divider"
        style="@style/DocumentActionDivider" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_delete"
        style="@style/DocumentActionItem"
        android:text="@string/delete"
        android:textColor="@color/primary"
        app:drawableStartCompat="@drawable/ic_delete" />
</androidx.appcompat.widget.LinearLayoutCompat>
